--- a/examples/visualization/styles/helpers/color-bins-style.html
+++ b/examples/visualization/styles/helpers/color-bins-style.html
@@ -35,16 +35,11 @@
       async function initialize() {
         carto.setDefaultCredentials({ username: 'public' });
 
-        const deckMap = new window.deck.DeckGL({
-          container: 'map',
-          mapStyle: 'https://basemaps.cartocdn.com/gl/voyager-gl-style/style.json',
-          initialViewState: {
-            longitude: -3.700385991742541,
-            latitude: 40.41532659629741,
+        const deckMap = carto.viz.map('voyager', {
+            longitude: -3.7003859,
+            latitude: 40.4153265,
             zoom: 12,
-          },
-          controller: true,
-        });
+          });
 
         const availabilityStyle = carto.viz.colorBinsStyle('availability_365', {
           bins: [0, 100, 200, 300, 365],
